# inspector

./: .gitignore  package-lock.json  package.json  pyproject.toml
cli/: package.json
client/: package.json  vite.config.ts
client/src/: App.tsx
client/src/components/: ToolsTab.tsx  handleMetadataSaved.ts
client/src/components/__tests__/: ToolsTab.test.tsx  handleMetadataSaved.test.ts
client/src/components/editor/: ToolEditForm.tsx  WarningBadge.tsx  WarningList.tsx
client/src/lib/: metadataApi.test.ts  metadataApi.ts  metadataWarnings.ts  recentMetadataPaths.ts  warningClasses.ts
client/src/lib/__tests__/: metadataWarnings.test.ts  warningClasses.test.ts  (+1 more)
docs/: inspector-architecture.md  reload-spike-findings.md
examples/weather-server/: metadata.json  package.json
examples/weather-server-py/: README.md  metadata.json  pyproject.toml
examples/weather-server-py/src/weather_server_py/: server.py
examples/weather-server/src/: index.ts
packages-py/mcp-editor-metadata/: README.md  pyproject.toml
packages-py/mcp-editor-metadata/src/mcp_editor_metadata/: __init__.py  loader.py  registry.py  reload_tool.py  schema.py
packages-py/mcp-editor-metadata/tests/: test_loader.py  test_registry.py  test_reload_tool.py  test_schema.py
server/: package.json
server/src/: index.ts
server/src/middleware/: auth.ts
server/src/routes/: metadata.integration.test.ts  metadata.test.ts  metadata.ts
spikes/reload-python/: .gitignore  server.py  test.py
spikes/reload-typescript/: metadata.json  package-lock.json  package.json  server.ts  test.ts  tsconfig.json
(+3 files in other folders)
