[project]
name = "weather-server-py"
version = "0.1.0"
description = "Reference FastMCP server using mcp-editor-metadata for hot reload."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastmcp~=3.2",
    "mcp-editor-metadata",
]

[project.scripts]
weather-server-py = "weather_server_py.server:main"

[tool.uv.sources]
mcp-editor-metadata = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_server_py"]
