[project]
name = "mcp-editor-metadata"
version = "0.1.0"
description = "Metadata-based hot reload for FastMCP servers, used by mcp-editor."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastmcp~=3.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_editor_metadata"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
